tests/negative/typecheck/type_eq_false.orng
// 
fn main() -> Int {
    if Int == Char {
        unreachable
    } else {
        252
    }
}